--- a/src/web/stackview/jquery.stackview.css
+++ b/src/web/stackview/jquery.stackview.css
@@ -14,6 +14,7 @@
 .stackview * {
   margin: 0;
   padding: 0;
+  margin-left:0px;
 }
 
 .stack-items {
@@ -53,7 +54,8 @@
   height: 35px;
   position: relative;
   z-index: 9997;
-  margin-bottom:5px;	
+  margin-bottom:5px;
+  margin-left:20px;
 }
 
 .stack-item {
